[tool.poetry]
name = "mdnice"
version = "0.0.1"
description = "将 Markdown 转换为微信公众号、知乎、稀土掘金支持的富文本格式"
authors = ["xiaoqiang <xiaoqiangclub@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/xiaoqiangclub/mdnice"
repository = "https://github.com/xiaoqiangclub/mdnice"
keywords = ["markdown", "converter", "wechat", "zhihu", "juejin"]

packages = [{ include = "mdnice" }]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
webdriver-manager = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"